--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ead-platform",
+  "name": "appigreja",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "next": "^16.1.1",
+    "npm": "^11.7.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
@@ -24,9 +25,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
